--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,6 @@ body {
   width: 100vw;
   height: 100vh;
 }
-
 #landing-page {
   text-align: center;
   background-image: url("../images/game-bckgrd-overlay.jpg");
@@ -22,14 +21,12 @@ body {
   width: 100vw;
   height: 100vh;
 }
-
 #title {
   text-align: center;
   margin: 0;
   padding-top: 75px;
   font-size: 40px;
 }
-
 #rules {
   margin: 0;
   padding-top: 50px;
@@ -38,44 +35,36 @@ body {
   padding-left: 41%;
   align-items: baseline;
 }
-
 .symbols {
   font-size: 40px;
 }
-
 .ratPic {
   width: 9%;
   height: auto;
 }
-
 .pickleRickPic {
   width: 5%;
   height: auto;
 }
-
 #instructions1 {
   padding-left: 24%;
   padding-top: 20px;
   margin-top: 15px;
   font-size: 30px;
 }
-
 #mouseClickImg {
   width: 100px;
   height: auto;
 }
-
 #instructions2 {
   padding-top: 0px;
   padding-left: 24%;
   margin-bottom: 15px;
   font-size: 30px;
 }
-
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 1000, "GRAD" 0, "opsz" 60;
 }
-
 #start-button {
   padding: 12px 50px;
   font-family: "Creepster", cursive;
@@ -92,13 +81,11 @@ body {
   border-width: 5px;
   opacity: 0.6;
 }
-
 #title-game-over {
   margin: 0;
   padding-top: 120px;
   font-size: 70px;
 }
-
 #try-again-button {
   padding: 12px 50px;
   font-family: "Creepster", cursive;
@@ -114,7 +101,6 @@ body {
   border-width: 5px;
   opacity: 0.6;
 }
-
 #game-over-img {
   opacity: 0.9;
   width: auto;
@@ -122,11 +108,9 @@ body {
   position: absolute;
   overflow: hidden;
 }
-
 #game-over-board {
   overflow: hidden;
 }
-
 #board {
   height: 100vh;
   position: relative;
@@ -164,6 +148,10 @@ body {
   font-weight: bold;
   text-shadow: 2px 2px black;
   -webkit-text-stroke: 1px black;
+}
+
+.level-up {
+  position: absolute;
 }
 
 /* all the following lines are related to sound toggle switch styling */
@@ -242,9 +230,17 @@ input:checked + .slider:before {
 }
 
 .soundImg {
-  margin-top: 16px;
+  margin-top: 21.5px;
   position: absolute;
   width: auto;
-  height: 40px;
-  margin-left: 20px;
+  height: 30px;
+  margin-left: 25px;
+}
+
+.silentImg {
+  margin-top: 21px;
+  position: absolute;
+  width: auto;
+  height: 32px;
+  margin-left: 137px;
 }
