--- a/styles/styles.css
+++ b/styles/styles.css
@@ -254,3 +254,20 @@ input:checked + .slider:before {
   color: white;
   text-shadow: 2px 2px #000000;
 }
+
+.spinner {
+  display: inline-block;
+  margin-top: 40vh;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 5px solid #ccc;
+  border-top-color: #777;
+  animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
